# rofl-project-code

./: .gitignore  Cargo.toml  Pipfile  README.md  pyproject.toml
adversarial-framework/: .ethusername  .gitignore  LICENSE  README.md  cil-train-euler.sh  cil-train.sh  common.txt  joblog.txt  load-tfevents.sh  notes.txt  notes_subspace.txt  requirements.txt  run_multiple_mal.sh  run_targeted_mal_baseline.sh  run_untargeted_mal_baseline.sh
adversarial-framework/data_fetching/: download_data.py
adversarial-framework/models/: lenet5_emnist_088.h5  lenet5_emnist_097.h5  lenet5_emnist_098.h5  resnet18.h5  resnet18_central_subopt.h5  resnet18_old.h5
adversarial-framework/plotting/: baseline.py  selected_clients.py
adversarial-framework/scripts/: 41clipping.sh  42intrinsicemnist.sh  cifar_attack.sh  compare_optimization_allcnn.sh  compare_pgd_attack.sh  compare_pgd_training.sh  fmnist_clip_layers.sh  iidvsnoniid.sh
adversarial-framework/src/: attack_dataset_config.py  client.py  client_attacks.py  config_cli.py  config_old.py  custom_summary_writer.py  federated_averaging.py  hyperparameter_tuning.py  learning_rate_decay.py  loss.py  main.py  prob_clip.py  test_util.py  tf_data.py  tf_data_global.py  tf_model.py  util.py
adversarial-framework/train_configs/: backdoor_bagdas_cifar_background_wall.yml  backdoor_bagdas_cifar_green_car.yml  backdoor_bagdas_cifar_racing_stripes.yml  backdoor_bagdas_cifar_random.yml  backdoor_bagdas_cifar_recreate.yml  backdoor_tasks.yml  backdoor_tasks_small.yml  bhagoji_fmnist_multiple.yml  bhagoji_fmnist_single.yml  bhagoji_pgd.yml  cifar_clipping_bound_continuous.yml  cifar_clipping_bound_continuous_mr.yml  cifar_fl.yml  cifar_lenet5.yml  (+15 more)
adversarial_fl_framework/: README.md  cil-plot.sh  cil-train-cpu.sh  cil-train.sh  run_baseline.sh  run_last_untargeted_mal_after_baseline.sh  run_scale_mal.sh  run_untargeted_mal_after_baseline.sh
ansible/: Pipfile  README.md  analysis.yml  analysis_aws.yml  analysis_kill.yml  e2ebench.yml  microbench.yml  mongodb.yml  tb.yml
configs/: example_config.yml  example_intrinsic.yml  intrinsic_test.yml
models/: cifar_lenet5_initialized.txt  mnist_dev_initialized.txt  resnet18_intrinsic_25k.txt  resnet18_intrinsic_40k.txt  resnet18_intrinsic_41.txt  resnet18_intrinsic_45k.txt  resnet18_intrinsic_50k.txt  resnet18_intrinsic_55k.txt
paper/: aggregator.py  extract_histogram.py  extract_tfevents.py  paper_plots.ipynb  plots.py
plots/: common.py  plots.ipynb  plots.py  plots_e2e.ipynb  plots_presentation.ipynb  table.ipynb  table_backup.ipynb
robust-secure-aggregation/: .gitignore  .gitignore.save  README.md  pip-selfcheck.json  pyvenv.cfg  requirements.txt  server_eval.csv  setup.py
rofl-v2/: .gitignore  Cargo.toml  README.md  build_release.sh  build_release_avx512.sh  cifar_lenet5_intrinsic_12k.txt  mnist_dev_intrinsic_5k.txt  model_1_round_9.txt
rofl-v2/rofl_crypto/: Cargo.toml
rofl-v2/rofl_crypto/benches/: addelgamal_bench.rs  create_randproof_bench.rs  create_rangeproof_bench.rs  create_squarerandproof_bench.rs  criterion_randproof_bench.rs  criterion_rangeproof_bench.rs  dlog2_bench.rs  dlog_bench.rs  fp_bench.rs  l2rangeproof_bench.rs  paper_addelgamal_bench.rs  paper_createonly_randproof_bench.rs  paper_createonly_rangeproof_bench.rs  paper_createonly_squarerandproof_bench.rs  paper_dlog_bench.rs  paper_l2rangeproof_bench.rs  paper_randproof_bench.rs  paper_rangeproof_bench.rs  paper_squarerandproof_bench.rs  randproof2_bench.rs  randproof_bench.rs  rangeproof2_bench.rs  rangeproof_bench.rs  rangeproof_verify_bench.rs  squarerandproof2_bench.rs  squarerandproof_bench.rs
rofl-v2/rofl_crypto/src/: bindings32.rs  bsgs32.rs  conversion32.rs  fp.rs  lib.rs  pedersen_ops.rs  serde_vec.rs  util.rs
rofl-v2/rofl_crypto/src/l2_range_proof_vec/: errors.rs  mod.rs
rofl-v2/rofl_crypto/src/rand_proof/: dealer.rs  el_gamal.rs  errors.rs  mod.rs  party.rs  transcript.rs  util.rs
rofl-v2/rofl_crypto/src/rand_proof_vec/: errors.rs  mod.rs
rofl-v2/rofl_crypto/src/range_proof_vec/: mod.rs
rofl-v2/rofl_crypto/src/square_rand_proof/: constants.rs  dealer.rs  errors.rs  mod.rs  party.rs  pedersen.rs
rofl-v2/rofl_crypto/src/square_rand_proof_vec/: errors.rs  mod.rs
rofl-v2/rofl_service/: Cargo.toml  build.rs
rofl-v2/rofl_service/proto/roflservice/: flservice.proto
rofl-v2/rofl_service/src/: lib.rs
rofl-v2/rofl_service/src/flserver/: client.rs  flservice.rs  logs.rs  mod.rs  params.rs  server.rs  trainclient.rs  util.rs
rofl_crypto/: Cargo.toml  generate_unique_u8_triplets.py
rofl_crypto/benches/: addelgamal_bench.rs  benchmark_randproof_bench.rs  benchmark_rangeproof_bench.rs  compressedrandproof_bench.rs  create_compressedrandproof_bench.rs  create_randproof_bench.rs  create_rangeproof_bench.rs  create_squareproof_bench.rs  create_squarerandproof_bench.rs  criterion_dlog_bench.rs  criterion_randproof_bench.rs  criterion_rangeproof_bench.rs  dlog_bench.rs  fp_bench.rs  l2rangeproof_bench.rs  randproof_bench.rs  rangeproof_bench.rs  rangeproof_part36_bench.rs  rangeproof_verify_bench.rs  squareproof_bench.rs  squarerandproof_bench.rs
rofl_crypto/src/: bench_constants.rs  bindings32.rs  bsgs32.rs  conversion32.rs  lib.rs  pedersen_ops.rs  serde_vec.rs
rofl_crypto/src/compressed_rand_proof/: constants.rs  dealer.rs  errors.rs  mod.rs  party.rs  types.rs
rofl_crypto/src/l2_range_proof_vec/: mod.rs
rofl_crypto/src/rand_proof/: dealer.rs  el_gamal.rs  mod.rs  party.rs  transcript.rs
rofl_crypto/src/rand_proof_vec/: errors.rs  mod.rs
rofl_crypto/src/range_proof_vec/: errors.rs  mod.rs
rofl_crypto/src/square_proof/: dealer.rs  errors.rs  mod.rs  party.rs  pedersen.rs
rofl_crypto/src/square_proof_vec/: errors.rs  mod.rs
rofl_crypto/src/square_rand_proof/: dealer.rs  errors.rs  mod.rs  party.rs  pedersen.rs
rofl_crypto/src/square_rand_proof_vec/: mod.rs
rofl_service/: Cargo.toml  build.rs
rofl_service/proto/roflservice/: flservice.proto
rofl_service/src/flserver/: client.rs  errors.rs  logs.rs  mod.rs  params.rs  server.rs  trainclient.rs
rofl_train_client/: requirements.txt
(+1121 files in other folders)
