[workspace]

members = [
    "rofl_crypto",
    "rofl_service"
]

[patch.crates-io]
tinytemplate = { git = "https://github.com/bheisler/TinyTemplate", branch = "master" }
#curve25519-dalek-ng = { path = "/Users/hidde/Documents/PhD/curve25519-dalek-ng" }
#curve25519-dalek-ng = { git = "https://github.com/hiddely/curve25519-dalek-ng", branch = "main", default-features = false, features = ["std", "avx2_backend"], optional = false }

[profile.release]
opt-level = 3
