[package]
name = "rofl_crypto"
version = "0.1.0"
authors = ["Hidde Lycklama <hidde.lycklama@inf.ethz.ch>", "mlei <mathiaschinna@gmail.com>"]
edition = "2018"


[lib]
name = "rofl_crypto"
crate-type = ["rlib", "dylib"]

[dependencies]
curve25519-dalek = {  package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["std", "avx2_backend"], optional = false }

proc-macro2 = { version = "1.0.28" }
#NOTE mlei: cannot be higher otherwise wont compile
packed_simd = { version = "0.3.8", package = "packed_simd_2" }

libc = "0.2.48"
bulletproofs="4.0.0"
fixed = "0.3.1"
rand = "0.8"
byteorder = "1.3.1"
serde_json = "1.0"
bincode = "1.3.1"
hashbrown = "0.1"
rayon = "1.0.3"
criterion = "0.3.4"
merlin = "3"
num_cpus = "1.10.0"
sha3 = "0.9.1"
serde = "1"
failure = "0.1"
clear_on_drop = "0.2"
itertools = "0.8.0"
chrono = "0.4.6"
bencher = "0.1.5"
reduce = "0.1.2"

# Temporary until this package is fixed for Nightly
#tinytemplate = { git = "https://github.com/botika/TinyTemplate", branch = "master" }
#[patch.crates-io]
#tinytemplate = { git = "https://github.com/botika/TinyTemplate", branch = "master" }


[features]
fp8 = []
fp16 = []
fp32 = []
fp64 = []

frac0 = []
frac1 = []
frac2 = []
frac3 = []
frac4 = []
frac5 = []
frac6 = []
frac7 = []
frac8 = []
frac9 = []
frac10 = []
frac11 = []
frac12 = []

avx2_backend = ["curve25519-dalek/avx2_backend"]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3

[[bench]]
name = "rangeproof_bench"
harness = false

[[bench]]
name = "randproof_bench"
harness = false

[[bench]]
name = "squarerandproof_bench"
harness = false

[[bench]]
name = "l2rangeproof_bench"
harness = false

[[bench]]
name = "dlog_bench"
harness = false

[[bench]]
name = "fp_bench"
harness = false

[[bench]]
name = "addelgamal_bench"
harness = false

[[bench]]
name = "criterion_dlog_bench"
harness = false

[[bench]]
name = "criterion_rangeproof_bench"
harness = false

[[bench]]
name = "criterion_randproof_bench"
harness = false

[[bench]]
name = "create_rangeproof_bench"
harness = false

[[bench]]
name = "create_randproof_bench"
harness = false

[[bench]]
name = "create_squarerandproof_bench"
harness = false

[[bench]]
name = "rangeproof_verify_bench"
harness = false

[[bench]]
name = "benchmark_rangeproof_bench"
harness = false

[[bench]]
name = "benchmark_randproof_bench"
harness = false