[package]
name = "rofl_service"
version = "0.1.0"
authors = ["Lukas Burkhalter <lukas.burkhalter@ringwil.ch>"]
edition = "2018"


[dependencies]
rofl_crypto= { path = "../rofl_crypto" }
curve25519-dalek = { version = "1.1.3", default-features = false, features = ["std", "avx2_backend"], optional = false }
bulletproofs="1.0.4"
rayon = "1.0.3"
num_cpus = "1.10.0"
rand = "0.7.3"
rand_distr = "0.2.2"
prost = "0.7.0"
tonic = {version="0.4.0", features = ["prost"]}
http = "0.2"
tokio = {version="1.3.0", features = ["full"]}
tokio-stream = { version =  "0.1.3", features = ["net"] }
futures = "0.3"
hex = "0.4.2"
clap = "2"
bincode = "1.3.1"
yaml-rust = "0.4"

flexi_logger = "0.17"
log = "0.4"

[build-dependencies]
tonic-build = "0.4.0"

[profile.dev]
opt-level = 2   

[profile.release]
opt-level = 3

[[bin]]
name = "flserver"
path = "src/bin/basic_server.rs"

[[bin]]
name = "flclients"
path = "src/bin/basic_client.rs"

[[bin]]
name = "test_train"
path = "src/bin/test_train_client.rs"

[[bin]]
name = "config_server"
path = "src/bin/config_server.rs"