[package]
name = "rofl_crypto"
version = "0.1.0"
authors = ["mlei <mathiaschinna@gmail.com>"]
edition = "2018"


[lib]
name = "rofl_crypto"
crate-type = ["rlib", "dylib"]

[dependencies]
curve25519-dalek = { version = "1.1.3", default-features = false, features = ["std", "avx2_backend"], optional = false }

#NOTE mlei: cannot be higher otherwise wont compile
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

libc = "0.2.48"
bulletproofs="1.0.4"
fixed = "0.3.1"
rand = "0.5"
byteorder = "1.3.1"
serde_json = "1.0"
bincode = "1.3.1"
hashbrown = "0.1"
rayon = "1.0.3"
criterion = "0.2.10"
merlin = "1.0.3"
num_cpus = "1.10.0"
sha3 = "0.8"
serde = "1"
failure = "0.1"
clear_on_drop = "0.2"
itertools = "0.8.0"
chrono = "0.4.6"
bencher = "0.1.5"
reduce = "0.1.2"



[features]
fp8 = []
fp16 = []
fp32 = []
fp64 = []

frac0 = []
frac1 = []
frac2 = []
frac3 = []
frac4 = []
frac5 = []
frac6 = []
frac7 = []
frac8 = []
frac9 = []
frac10 = []
frac11 = []
frac12 = []

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3

[[bench]]
name = "rangeproof_bench"
harness = false

[[bench]]
name = "randproof_bench"
harness = false

[[bench]]
name = "dlog_bench"
harness = false

[[bench]]
name = "fp_bench"
harness = false

[[bench]]
name = "dlog2_bench"
harness = false

[[bench]]
name = "rangeproof2_bench"
harness = false

[[bench]]
name = "addelgamal_bench"
harness = false

[[bench]]
name = "randproof2_bench"
harness = false

[[bench]]
name = "squarerandproof2_bench"
harness = false

[[bench]]
name = "l2rangeproof_bench"
harness = false

[[bench]]
name = "paper_rangeproof_bench"
harness = false

[[bench]]
name = "paper_l2rangeproof_bench"
harness = false

[[bench]]
name = "paper_randproof_bench"
harness = false

[[bench]]
name = "paper_squarerandproof_bench"
harness = false

[[bench]]
name = "paper_dlog_bench"
harness = false

[[bench]]
name = "paper_addelgamal_bench"
harness = false

[[bench]]
name = "paper_createonly_rangeproof_bench"
harness = false

[[bench]]
name = "paper_createonly_randproof_bench"
harness = false

[[bench]]
name = "paper_createonly_squarerandproof_bench"
harness = false