[package]
name = "rofl_service"
version = "0.1.0"
authors = ["Lukas Burkhalter <lukas.burkhalter@ringwil.ch>"]
edition = "2018"


[dependencies]
rofl_crypto= { path = "../rofl_crypto" }
rand_core = "0.5.1"
rand = "0.7.3"
prost = "0.6"
tonic = "0.3"
tokio = {version="0.2.0",features = ["stream", "macros", "rt-threaded", "fs", "blocking"]}
futures = "0.3"
hex = "0.4.2"
clap = "2"
bincode = "1.3.1"


[build-dependencies]
tonic-build = "0.3"

[profile.dev]
opt-level = 2   

[[bin]]
name = "flserver"
path = "src/bin/basic_server.rs"

[[bin]]
name = "flclients"
path = "src/bin/basic_client.rs"